// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InvitationForwardingDialog matches snapshot when opened with Additional Comments 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class=""
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="dialogContainer"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        data-cvent-id="Dialog-Header"
                        id="dialogHeader"
                        style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.875rem; color: rgb(4, 21, 50); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                      >
                        <h2
                          class=""
                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 2.5rem; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          dummy title
                        </h2>
                      </div>
                    </div>
                    <span
                      class="mockNucleusCoreTransition"
                    >
                      <div
                        class="panel"
                      >
                        <div>
                          <div>
                            <div
                              class="element"
                              data-cvent-id="first-Name"
                            >
                              <label
                                class="labelOnTop"
                                for="firstName"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_FirstName__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="firstName"
                                    maxlength="30"
                                    name="firstName"
                                    placeholder=""
                                    required=""
                                    style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="element"
                              data-cvent-id="last-Name"
                            >
                              <label
                                class="labelOnTop"
                                for="lastName"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_LastName__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="lastName"
                                    maxlength="50"
                                    name="lastName"
                                    placeholder=""
                                    required=""
                                    style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="element"
                              data-cvent-id="email-Address"
                            >
                              <label
                                class="labelOnTop"
                                for="emailAddress"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_EmailAddress__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="emailAddress"
                                    maxlength="80"
                                    name="emailAddress"
                                    placeholder=""
                                    required=""
                                    style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                            <button
                              class=""
                              data-cvent-id="add-another-button"
                              style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            >
                              EventWidgets_ForwardInv_AddAnotherButton__resx
                            </button>
                            <div
                              class="element"
                              data-cvent-id="additional-comment-section"
                            >
                              <label
                                class="labelOnTop"
                                for="comments"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    data-cvent-id="label"
                                  >
                                    EventWidgets_ForwardInv_Comment__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <span>
                                  <textarea
                                    class=""
                                    data-cvent-id="input"
                                    id="comments"
                                    maxlength="100"
                                    name="comments"
                                    placeholder=""
                                    style="box-sizing: border-box; overflow: hidden; height: 0px;"
                                  />
                                </span>
                              </div>
                            </div>
                            <div
                              class="element"
                            >
                              <button
                                aria-label="cancel_btn__resx"
                                class=""
                                data-cvent-id="no-submit-button"
                                title="cancel_btn__resx"
                                type="button"
                              >
                                <span>
                                  cancel_btn__resx
                                </span>
                              </button>
                              <button
                                aria-label="EventWidgets_ContactPlanner_Send__resx"
                                class=""
                                data-cvent-id="yes-submit-button"
                                title="EventWidgets_ContactPlanner_Send__resx"
                                type="button"
                              >
                                <span>
                                  EventWidgets_ContactPlanner_Send__resx
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`InvitationForwardingDialog matches snapshot when opened without Additional Comments 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class=""
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="dialogContainer"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        data-cvent-id="Dialog-Header"
                        id="dialogHeader"
                        style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.875rem; color: rgb(4, 21, 50); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                      >
                        <h2
                          class=""
                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 2.5rem; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          dummy title
                        </h2>
                      </div>
                    </div>
                    <span
                      class="mockNucleusCoreTransition"
                    >
                      <div
                        class="panel"
                      >
                        <div>
                          <div>
                            <div
                              class="element"
                              data-cvent-id="first-Name"
                            >
                              <label
                                class="labelOnTop"
                                for="firstName"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_FirstName__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="firstName"
                                    maxlength="30"
                                    name="firstName"
                                    placeholder=""
                                    required=""
                                    style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="element"
                              data-cvent-id="last-Name"
                            >
                              <label
                                class="labelOnTop"
                                for="lastName"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_LastName__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="lastName"
                                    maxlength="50"
                                    name="lastName"
                                    placeholder=""
                                    required=""
                                    style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="element"
                              data-cvent-id="email-Address"
                            >
                              <label
                                class="labelOnTop"
                                for="emailAddress"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_EmailAddress__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="emailAddress"
                                    maxlength="80"
                                    name="emailAddress"
                                    placeholder=""
                                    required=""
                                    style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                            <button
                              class=""
                              data-cvent-id="add-another-button"
                              style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                            >
                              EventWidgets_ForwardInv_AddAnotherButton__resx
                            </button>
                            <div
                              class="element"
                            >
                              <button
                                aria-label="cancel_btn__resx"
                                class=""
                                data-cvent-id="no-submit-button"
                                title="cancel_btn__resx"
                                type="button"
                              >
                                <span>
                                  cancel_btn__resx
                                </span>
                              </button>
                              <button
                                aria-label="EventWidgets_ContactPlanner_Send__resx"
                                class=""
                                data-cvent-id="yes-submit-button"
                                title="EventWidgets_ContactPlanner_Send__resx"
                                type="button"
                              >
                                <span>
                                  EventWidgets_ContactPlanner_Send__resx
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`InvitationForwardingDialog matches snapshot when popup is closed 1`] = `
Array [
  <div
    class=""
  >
    <span
      class="mockNucleusCoreTransition"
    />
  </div>,
]
`;
